Version 0.33.1
   * Positions of indel mutations are no longer normalized in polymorphism mode
     because this process can fail and lead to duplicate GD entries. Note: you *can*
     still use gdtools NORMALIZE on a GD file output by a polymorphism mode run if you
     want to compare it to GD files from consensus mode. Just be aware that NORMALIZE
     may fail if you have certain complicated cases with multiple base substitutions
     and indels near one another such that shifting them can lead to conflicts.
   * Added option to preserve evidence entries to gdtools ANNOTATE.

Version 0.33.0
   * Changed behavior of gdtools SUBTRACT to ignore mutation frequencies by default;
     and fixed floating point error when frequencies are taken into account
   * Separated output of normal annotation of mutations in a GD file and 
     additional HTML-specific fields. gdtools ANNOTATE/COMPARE has a new option to 
     add the supplementary html_* and position_start/end fields if you need them.
   * Changed character separating annotation information about multiple overlapping
      genes to '|' from ';'.
   * Improved automatic detection of libunwind and added configure option (--without-libunwind).
     Changed default settings to not use libunwind for binary builds to improve compatibility.

Version 0.32.1
   * Added --minimum-mapping-quality option. Currently it is OFF by default.
   * Fixed incorrect ordering of read mapping criteria that could lead to longer but worse alignment
     being accepted over shorter match that did not meet --required-match-fraction
   * Removed the gdtools MERGE subcommand (it had become equivalent to gdtools UNION).
   * Fixed adding correct gene features to copies created by AMP mutations in gdtools APPLY.

Version 0.32.0
   * If a mutation overlaps multiple genes, its effect on each gene is now annotated.
     (Previously only the first gene encountered was annotated.) The relevant Genome Diff 