@@ -1,7 +1,7 @@
 #=GENOME_DIFF	1.0
 #=TITLE	gd
 INS	1	.	NC_001416-1	4566	G	frequency=1	frequency_gd=1	gene_name=L/K	gene_position=intergenic (+139/-10)	gene_product=tail component/tail component	gene_strand=>/>	genes_promoter=K	html_gene_name=<i>L</i>&nbsp;&rarr;&nbsp;/&nbsp;&rarr;&nbsp;<i>K</i>	html_gene_product=tail component/tail component	html_mutation=+G	html_mutation_annotation=intergenic&nbsp;(+139/&#8209;10)	html_position=4,566	html_seq_id=NC_001416&#8209;1	insert_position=0	locus_tag=lambdap18/lambdap19	locus_tags_promoter=lambdap19	mutation_category=small_indel	position_end=4566	position_start=4566
-SNP	2	.	NC_001416-2	1261	G	aa_new_seq=E|NA	aa_position=338|NA	aa_ref_seq=K|NA	codon_new_seq=GAA|NA	codon_number=338|NA	codon_position=1|NA	codon_ref_seq=AAA|NA	frequency=1	frequency_gd=1	gene_name=orf-401|orf206b	gene_position=1012|noncoding (107/621 nt)	gene_product=Tail fiber protein|	gene_strand=>|<	genes_overlapping=orf-401,orf206b	html_gene_name=<i>orf&#8209;401</i>&nbsp;&rarr;<br><i>orf206b</i>&nbsp;&rarr;	html_gene_product=Tail fiber protein<br>	html_mutation=A&rarr;G	html_mutation_annotation=<font class="snp_type_nonsynonymous">K338E</font>&nbsp;(<font class="mutation_in_codon">A</font>AA&rarr;<font class="mutation_in_codon">G</font>AA)&nbsp;<br>noncoding&nbsp;(107/621&nbsp;nt)	html_position=1,261	html_seq_id=NC_001416&#8209;2	locus_tag=lambdap27|lambdap90_made_noncoding	locus_tags_overlapping=lambdap27,lambdap90_made_noncoding	mutation_category=snp_nonsynonymous|noncoding	position_end=1261	position_start=1261	snp_type=nonsynonymous|noncoding	transl_table=11|NA
+SNP	2	.	NC_001416-2	1261	G	aa_new_seq=E|NA	aa_position=338|NA	aa_ref_seq=K|NA	codon_new_seq=GAA|NA	codon_number=338|NA	codon_position=1|NA	codon_ref_seq=AAA|NA	frequency=1	frequency_gd=1	gene_name=orf-401|orf206b	gene_position=1012|noncoding (107/621 nt)	gene_product=Tail fiber protein|	gene_strand=>|<	genes_overlapping=orf-401,orf206b	html_gene_name=<i>orf&#8209;401</i>&nbsp;&rarr;<br><i>orf206b</i>&nbsp;&larr;	html_gene_product=Tail fiber protein<br>	html_mutation=A&rarr;G	html_mutation_annotation=<font class="snp_type_nonsynonymous">K338E</font>&nbsp;(<font class="mutation_in_codon">A</font>AA&rarr;<font class="mutation_in_codon">G</font>AA)&nbsp;<br>noncoding&nbsp;(107/621&nbsp;nt)	html_position=1,261	html_seq_id=NC_001416&#8209;2	locus_tag=lambdap27|lambdap90_made_noncoding	locus_tags_overlapping=lambdap27,lambdap90_made_noncoding	mutation_category=snp_nonsynonymous|noncoding	position_end=1261	position_start=1261	snp_type=nonsynonymous|noncoding	transl_table=11|NA
 INS	3	.	NC_001416-2	1435	C	frequency=1	frequency_gd=1	gene_name=orf-401	gene_position=coding (1186/1206 nt)	gene_product=Tail fiber protein	gene_strand=>	genes_overlapping=orf-401	html_gene_name=<i>orf&#8209;401</i>&nbsp;&rarr;	html_gene_product=Tail fiber protein	html_mutation=+C	html_mutation_annotation=coding&nbsp;(1186/1206&nbsp;nt)	html_position=1,435	html_seq_id=NC_001416&#8209;2	insert_position=0	locus_tag=lambdap27	locus_tags_overlapping=lambdap27	mutation_category=small_indel	position_end=1435	position_start=1435
 SNP	4	.	NC_001416-2	2314	A	aa_new_seq=N	aa_position=229	aa_ref_seq=S	codon_new_seq=AAC	codon_number=229	codon_position=2	codon_ref_seq=AGC	frequency=1	frequency_gd=1	gene_name=orf-314	gene_position=686	gene_product=Tail fiber	gene_strand=>	genes_overlapping=orf-314	html_gene_name=<i>orf&#8209;314</i>&nbsp;&rarr;	html_gene_product=Tail fiber	html_mutation=G&rarr;A	html_mutation_annotation=<font class="snp_type_nonsynonymous">S229N</font>&nbsp;(A<font class="mutation_in_codon">G</font>C&rarr;A<font class="mutation_in_codon">A</font>C)&nbsp;	html_position=2,314	html_seq_id=NC_001416&#8209;2	locus_tag=lambdap28	locus_tags_overlapping=lambdap28	mutation_category=snp_nonsynonymous	position_end=2314	position_start=2314	snp_type=nonsynonymous	transl_table=11
 SNP	5	.	NC_001416-2	2789	C	aa_new_seq=R	aa_position=73	aa_ref_seq=G	codon_new_seq=CGT	codon_number=73	codon_position=1	codon_ref_seq=GGT	frequency=1	frequency_gd=1	gene_name=orf-194	gene_position=217	gene_product=Putative fiber assembly protein	gene_strand=>	genes_overlapping=orf-194	html_gene_name=<i>orf&#8209;194</i>&nbsp;&rarr;	html_gene_product=Putative fiber assembly protein	html_mutation=G&rarr;C	html_mutation_annotation=<font class="snp_type_nonsynonymous">G73R</font>&nbsp;(<font class="mutation_in_codon">G</font>GT&rarr;<font class="mutation_in_codon">C</font>GT)&nbsp;	html_position=2,789	html_seq_id=NC_001416&#8209;2	locus_tag=lambdap29	locus_tags_overlapping=lambdap29	mutation_category=snp_nonsynonymous	position_end=2789	position_start=2789	snp_type=nonsynonymous	transl_table=11
